--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
 			<artifactId>checkers-quals</artifactId>
 			<version>1.6.7</version>
 		</dependency>
+	 <dependency>
+	  <groupId>${project.groupId}</groupId>
+	  <artifactId>swordfish</artifactId>
+	  <version>${project.version}</version>
+	 </dependency>
 	</dependencies>
 	<repositories>
 		<repository>
